Fix body overflow to prevent horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body{
     cursor: url('cursor.png'), auto;
     margin: 0;
     padding: 0;
+    overflow-x: hidden
 ;
 }
 btn:hover{
